# pyqt-template

./: LICENSE.md  Makefile  README.md  pyproject.toml
app/: __main__.py  main.py
app/utilities/: __init__.py  logger.py  singleton.py
app/views/: App.qml
app/views/buttons/: AbstractButton.qml  ErrorFilledButton.qml  ErrorOutlinedButton.qml  FilledButton.qml  NormalButton.qml  OutlinedButton.qml  SuccessFilledButton.qml  SuccessOutlinedButton.qml  WarningFilledButton.qml  WarningOutlinedButton.qml
app/views/themes/: AbstractTheme.qml  DarkTheme.qml  LightTheme.qml  Themes.qml  qmldir
tests/: test_utilities.py
