[project]
name = "pyqt-template"
description = "A template PyQt6 application using a MVC design pattern."
version = "0.1.0"
requires-python = ">=3.12.9"
authors = [
    { name = "rothman5", email = "rothman@ualberta.ca" }
]
dependencies = [
    "pyclean>=3.1.0",
    "pyside6>=6.9.0",
    "ruff>=0.11.11",
]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
